# pythea

./: .dockerignore  .gitignore  BENCHMARK_RESULTS.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION.md  GLASS_ADVANCED_FEATURES.md  GLASS_COMPLETE_SUMMARY.md  GLASS_FINAL_SUMMARY.md  GLASS_IMPLEMENTATION_SUMMARY.md  GLASS_SUPERIORITY_ANALYSIS.md  GLASS_WHITEPAPER.md  LICENSE.md  README.md  benchmark_ollama.py  benchmark_ollama_quick.py  glass_check.py  pyproject.toml  requirements.txt  test_ollama_glass.py
.claude/: settings.local.json
.codex/skills/rca-fix-agent/assets/: rca_report_template.md
.codex/skills/rca-fix-agent/references/: codex_web_search.md
.devcontainer/: devcontainer.json
app/cli/: frontend.py
app/examples/: example.py
app/web/: web_app.py
benchmarks/: __init__.py  benchmark_stark_prime.py  compare.py  data.py  utils.py
docker/: .env.example  Dockerfile  README.md  docker-compose.yml  nginx.conf
docs/: CLIENT.md  PROOF_REPAIR_AGENT.md  QMV.md
docs/claude-code-skills/: 01-overview.md  02-creating-skills.md  03-skillmd-reference.md  04-configuration.md  05-best-practices.md  06-examples.md  07-troubleshooting.md  README.md
docs/integration/: nala-mcp-usage.md
examples/: __init__.py  modern_attack_payloads.py  prompt_injection_audit.py  pythea_tutorial_hallucination_injection_cot_openai_updated.ipynb  run_audit_openai.py
glass/: README.md  README_EN.md  __init__.py  api.py  batch_optimizer.py  batch_processor.py  cache.py  example_hybrid.py  example_ollama.py  example_quick_start.py  grammatical_mapper.py  migration_helper.py  monitoring.py  planner.py  test_integration.py  visualizer.py
glass/metrics/: metrics_20251012_234350.json
nala-mcp/: nala-mcp.md
scripts/: gemini_toolkit.py  hallucination_toolkit.py
src/pythea/: __init__.py  _version.py  client.py  errors.py  types.py  utils.py
src/pythea.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pythea/hallucination_detector/: __init__.py  evidence_guard.py
src/pythea/offline/: __init__.py  qmv.py
strawberry/: .gitignore  README.md  UPDATES.md  benchmark_dual_entropy.py  benchmark_entropy.py  pyproject.toml  run_mcp_server.sh  run_nala_mcp_server.sh  truthfulqa_entropy_training.py
strawberry.bak/examples/: run_cot_detector.py
strawberry.bak/src/strawberry/: cli.py  eval.py  openai_backend.py  tasks.py
strawberry/examples/: run_synthetic.py
strawberry/src/strawberry/: __init__.py  aoai_pool_backend.py  aoai_pool_python.py  backend.py  cli.py  cot_detector.py  entropy_confidence.py  factual_recall.py  mcp_server.py  metrics.py  nala_mcp_server.py  openai_backend.py  stage_ab.py  trace_budget.py  vllm_backend.py
strawberry/src/strawberry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py
tests/e2e/: test_e2e_healthz.py  test_e2e_unified_answer.py
tests/unit/: test_client_headers.py  test_client_unified_answer.py  test_offline_qmv_features.py
