[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pythea"
version = "0.2.0"
description = "Python client + offline utilities for the Thea Mini Reasoning API"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Thea Team"}
]
license = {text = "MIT"}
dependencies = [
  "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pytest-asyncio>=0.21.0",
]

# Optional helper for OpenAI-style logit_bias tokenization in offline probes.
offline = [
  "tiktoken>=0.6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "e2e: end-to-end tests (requires THEA_BASE_URL and a reachable service)",
]
