[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pythea"
version = "0.3.0"
description = "LLM reliability research: procedural hallucination detection + Thea API client"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Hassana Labs"}
]
license = {text = "MIT"}
dependencies = [
  "httpx>=0.24.0",
  "openai>=1.0.0",
  "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pytest-asyncio>=0.21.0",
]
offline = [
  "tiktoken>=0.6.0",
]
vllm = [
  "vllm>=0.4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src", "strawberry/src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "e2e: end-to-end tests (requires THEA_BASE_URL and a reachable service)",
]
