[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strawberry"
version = "0.2.0"
description = "Operational toolkit for binding/routing information-theoretic evaluation (OpenAI + vLLM backends)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "openai>=1.0.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "tqdm>=4.66",
  "jsonschema>=4.0",
  "requests>=2.28",
]

[project.optional-dependencies]
vllm = [
  "vllm>=0.4.0",
  "transformers>=4.36",
  "torch>=2.1",
]
mcp = [
  "mcp[cli]>=1.0.0; python_version>='3.10'",
]

[project.scripts]
strawberry = "strawberry.cli:main"
hallucination-detector-mcp = "strawberry.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
